deploy/kustomize/control-plane/base/cno-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cno-ui
  name: cno-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cno-ui
  template:
    metadata:
      labels:
        app: cno-ui
    spec:
      containers:
      - image: beopenit/cno-ui:1.0.0-rc
        name: cno-ui
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: {}
