deploy/kustomize/control-plane/base/cno-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cno-ui
  name: cno-ui
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cno-ui
  type: ClusterIP
