deploy/kustomize/control-plane/base/cno-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: cno-ui
  name: cno-ui
spec:
  rules:
  - host: cno-ui.cluster.beopenit.com
    http:
      paths:
      - backend:
          serviceName: cno-ui
          servicePort: 80
